# botz

./: .env.example  .gitignore  CLAUDE.md  PLANNING.md  README.md  SOT.md  TASK.md  docker-compose.yml
backend/: Dockerfile  check_syntax.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: admin.py  analytics.py  chat.py  chat_complete.py  clients.py  gdpr.py  health.py  knowledge_base.py  llm.py  onboarding.py  search.py  vectors.py  versioning.py
backend/app/core/: config.py  database.py  redis.py  vector_db.py
backend/app/models/: client.py  clients.py  conversation.py  versioning.py
backend/app/rag/: chunking.py  embeddings.py
backend/app/schemas/: client.py  conversation.py  search.py  vector.py  versioning.py
backend/app/services/: audit_logging.py  auth_service.py  chat_service.py  conversation_service.py  data_retention.py  document_ingestion.py  escalation_service.py  gdpr_compliance.py  hybrid_search.py  llm_providers.py  llm_service.py  monitoring.py  response_service.py  tenant_isolation.py  usage_tracking.py  vector_service.py  versioning.py
backend/tests/: test_chat_service.py  test_chunking.py  test_document_ingestion.py  test_hybrid_search.py  test_llm_providers.py  test_multi_tenant.py  test_vector_service.py  test_versioning.py
context/: A.md  Q.md
frontend/: Dockerfile  README.md  jest.config.js  package.json  vite.config.ts
frontend/src/: index.ts
frontend/src/components/: ChatButton.tsx  ChatHeader.tsx  ChatWidget.tsx  ChatWindow.tsx  ErrorBoundary.tsx  EscalationBanner.tsx  LoadingSpinner.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx
frontend/src/services/: chatApi.ts  widgetState.ts
frontend/src/types/: chat.ts
frontend/src/widget/: embed.html  embed.js
scripts/: deploy.sh  dev-setup.sh  load_test.py
